[gd_scene load_steps=2 format=3 uid="uid://dknruy0w6okvd"]

[ext_resource type="Script" path="res://Test/Debug/archer_debug_panel.gd" id="1_4us1n"]

[node name="ArcherDebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 600.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_4us1n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "ARCHER DEBUG PANEL"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsText" type="RichTextLabel" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 5
theme_override_font_sizes/italics_font_size = 5
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 5
bbcode_enabled = true
text = "ESTAT√çSTICAS BASICAS"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StrategiesContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StrategiesList" type="RichTextLabel" parent="VBoxContainer/StrategiesContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 5
theme_override_font_sizes/italics_font_size = 5
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 5
bbcode_enabled = true
text = "ESTRATEGIAS APLICADAS"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DamageContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DamagesList" type="RichTextLabel" parent="VBoxContainer/DamageContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 5
theme_override_font_sizes/italics_font_size = 5
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 5
bbcode_enabled = true
text = "DANO E MODIFICADORES"
